corrections to integrated sass content, darker contrast default font color

--- a/_sass/scss/base/_base.scss
+++ b/_sass/scss/base/_base.scss
@@ -50,7 +50,7 @@ p{
   margin: 0 0 15px;
   line-height: 2.1;
   font-weight: 300;
-  color:$color-dark-gray;
+  color: $color-black;
   &:last-child{
     margin-bottom: 0;
   }
